Safer shutdown.  Ensure all sessions are closed and session state saved during Application destructor.

Make ~SessionManager do trivial tasks only.

BUG: 159657

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=789641